welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: not found: value Brosse
  Brosse() ; avance() ; gauche() ; avance() ; Brosse()
  ^MethodsPicture:4: error: not found: value Brosse
  Brosse() ; avance() ; gauche() ; avance() ; Brosse()
                                              ^MethodsPicture:5: error: not found: value Brosse
  recule() ; droite() ; avance() ; Brosse()
                                   ^